--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,3 +17,13 @@ html {
 		font-size: 10px;
 	}
 }
+
+@keyframes spin {
+	from {
+	  transform: rotate(0deg);
+	}
+	to {
+	  transform: rotate(-360deg);
+	}
+  }
+  
